[gd_scene load_steps=6 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Mob.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0.108734, -1.05463, 0, 0, 0, 0, 1018.05, 3.60626, 0, 0, 0, 0, 1022.71, 602.066, 0, 0, 0, 0, -3.62, 600.202, 0, 0, 0, 0, 0.108734, -1.05463 )
}

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Mob = ExtResource( 2 )

[node name="Player" parent="." index="0" instance=ExtResource( 3 )]

position = Vector2( 451.94, 205.857 )

[node name="StartTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="MobTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="StartPosition" type="Position2D" parent="." index="3"]

position = Vector2( 373.804, 199.487 )
_sections_unfolded = [ "Transform" ]

[node name="MobPath" type="Path2D" parent="." index="4"]

editor/display_folded = true
curve = SubResource( 1 )

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath" index="0"]

position = Vector2( 0.108734, -1.05463 )
rotation = 0.00457866
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="HUD" parent="." index="5" instance=ExtResource( 4 )]

[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]

[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]

[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]


